# Super-2023-Swadge-FW

./: .astylerc  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  burn-dbg.ps1  burn-dbg.sh  clean.bat  emu.mk  flash.bat  keepAlive.sh  kioskScript.sh  kioskScriptUnlocked.sh  lifeclicker.py  makefile_emu  midi_to_beeper_stable.py  out.txt  partitions.csv  sdkconfig  setup-esp-idf.ps1  setup-esp-idf.sh  setup-msys2.ps1  swadge-bros-kiosk.ps1  update-esp-idf.ps1  update-esp-idf.sh  usb_hid.patch
.circleci/: config.yml  trickSlackOrb.sh
3dmodelheadermaker/: README.md  cnovrsupport.h  objProcessor  objProcessor.c
PC Controller Mappings/AntiMicroX/: Swadge 2023 Blank.joystick.amgp  Swadge 2023 Emulator Player 2.joystick.amgp
PC Controller Mappings/JoyToKey/: Swadge 2023 Blank.cfg  Swadge 2023 Emulator.cfg
assets/: bf.json  jblocks.json  kd.json  sb.json  sn.json  test.json
assets/picross/: Bliss_c.aseprite  Fountain_Pen_SLV.aseprite  Magnet_SLV.aseprite
assets/texts/: alice.txt  astleyparadox.txt  banned.txt  blueeee.txt  braixen.txt  codeOfConduct.txt  demonslayer.txt  festival.txt  findthemall.txt  fitness.txt  flareon.txt  godihategaminglaptops.txt  halfApress.txt  homegoblin.txt  hunter2.txt  hypothetical.txt  kensama.txt  mikuoop.txt  morbiustime.txt  screwflanders.txt  tips.txt  tolerancetest.txt  touchgrass.txt  vacuuuum.txt  whoasked.txt
attic/: graphics_profiling_notes.c  setup-msvc.ps1
components/crashwrap/: CMakeLists.txt  crashwrap.c  crashwrap.h
components/hdw-btn/: CMakeLists.txt  btn.c  btn.h
components/hdw-buzzer/: CMakeLists.txt  musical_buzzer.c  musical_buzzer.h  musical_buzzer_rmt.c  musical_buzzer_tmr.c
components/hdw-esp-now/: CMakeLists.txt  espNowUtils.c  espNowUtils.h  p2pConnection.c  p2pConnection.h
components/hdw-i2c/: CMakeLists.txt  i2c-conf.c  i2c-conf.h
components/hdw-led/: CMakeLists.txt  led.c  led.h  led_strip.h  led_strip_rmt_ws2812.c  led_util.c  led_util.h
components/hdw-mic/: CMakeLists.txt  hdw-mic.c  hdw-mic.h
components/hdw-nvs/: CMakeLists.txt  nvs_manager.c  nvs_manager.h
components/hdw-oled/: CMakeLists.txt  bresenham.c  font.c  font.h  i2c.c  i2c.h  oled.c  oled.h  sprite.c  sprite.h  ssd1306.c  ssd1306.h
components/hdw-partition/: project_include.cmake
components/hdw-qma6981/: CMakeLists.txt  QMA6981.c  QMA6981.h  qma7981.c  qma7981.h
components/hdw-spiffs/: CMakeLists.txt  heatshrink_config.h  spiffs_json.c  spiffs_json.h  spiffs_manager.c  (+3 more)
kioskStartup/: leftstickcontroller.gamecontroller.amgp  rightstickcontroller.gamecontroller.amgp  runKiosk.sh
main/: CMakeLists.txt  Kconfig.projbuild  advanced_usb_control.c  advanced_usb_control.h  gameData.c  hello_world_main.c  hello_world_main.h  meleeMenu.c  meleeMenu.h  menu2d.c  menu2d.h  p2pConnection.c  p2pConnection.h  settingsManager.c  settingsManager.h  swadgeMode.h  swadge_esp32.c  swadge_esp32.h  swadge_util.c  swadge_util.h
main/colorchord/: DFT32.c  DFT32.h  ccconfig.h  embeddednf.c  embeddednf.h  embeddedout.c  embeddedout.h
main/display/: bresenham.c  bresenham.h  cndraw.c  cndraw.h  display.c  display.h  font.c  font.h  palette.c  palette.h  upng.c
main/modes/: aabb_utils.c  aabb_utils.h  common_typedef.h  entity.c  entity.h  entityManager.c  entityManager.h  gameData.h  mode_bee.c  mode_bee.h  mode_colorchord.c  mode_colorchord.h  mode_copypasta.c  mode_copypasta.h  mode_credits.c  mode_credits.h  mode_dance.c  mode_dance.h  mode_demo.c  mode_demo.h  mode_diceroller.c  mode_diceroller.h  mode_fighter.c  mode_fighter.h  mode_flight.c  mode_flight.h  mode_gamepad.c  mode_gamepad.h  mode_jukebox.c  mode_jukebox.h  mode_main_menu.c  mode_main_menu.h  mode_manual.c  mode_manual.h  mode_nvs_manager.c  mode_nvs_manager.h  mode_paint.c  mode_paint.h  mode_platformer.c  mode_platformer.h  (+16 more)
main/modes/fighter/: README.md  aabb_utils.c  aabb_utils.h  fighter_hr_result.c  fighter_hr_result.h  fighter_json.c  fighter_json.h  fighter_menu.c  fighter_menu.h  fighter_mp_result.c  fighter_mp_result.h  fighter_music.c  fighter_music.h  fighter_records.c  fighter_records.h  mode_fighter.c  mode_fighter.h
main/modes/flight/: 3denv.h
main/modes/jumper/: jumper_menu.c  jumper_menu.h  mode_jumper.c  mode_jumper.h
main/modes/music/: mode_slide_whistle.c  mode_slide_whistle.h  mode_swadgestrument.c  mode_swadgestrument.h  swadgeMusic.c  swadgeMusic.h
main/modes/paint/: mode_paint.c  mode_paint.h  paint_brush.c  paint_brush.h  paint_common.c  paint_common.h  paint_draw.c  paint_draw.h  paint_gallery.c  paint_gallery.h  paint_help.c  paint_help.h  paint_nvs.c  paint_nvs.h  paint_share.c  paint_share.h  paint_song.c  paint_song.h  paint_type.h  paint_ui.c  paint_ui.h  paint_util.c  paint_util.h  px_stack.c  px_stack.h
main/modes/picross/: mode_picross.c  mode_picross.h  picross_consts.h  picross_menu.c  picross_menu.h  picross_music.c  picross_music.h  picross_select.c  picross_select.h  picross_tutorial.c  picross_tutorial.h
main/modes/platformer/: common_typedef.h  entity.c  entity.h  entityManager.c  entityManager.h  gameData.c  gameData.h  leveldef.h  mode_platformer.c  mode_platformer.h  platformer_sounds.c  platformer_sounds.h  tilemap.c  tilemap.h
main/utils/: linked_list.c  linked_list.h  markdown_parser.c  markdown_parser.h  text_entry.c  text_entry.h
palette_gen/: makefile  palette_gen.c
pyFlashGui/: README.md  pyFlashGui.py  setup.ps1  setup.sh
scripts/: burn-dbg.ps1  clean.bat  emu.bat  export.bat  flash.bat  install.bat  setup-esp-idf.ps1  setup-esp-idf.sh  swadge-bros-kiosk.ps1  update-esp-idf.ps1  update-esp-idf.sh
spiffs_file_preprocessor/: Makefile  bin_processor.c  bin_processor.h  fileUtils.c  fileUtils.h  font_processor.c  font_processor.h  heatshrink_encoder.c  image_processor.c  image_processor.h  json_processor.c  json_processor.h  spiffs_file_preprocessor.c  spiffs_file_preprocessor.h  txt_processor.c  txt_processor.h
spiffs_image/: block.qoi  dq.qoi  run-1.qoi  run-2.qoi  run-3.qoi  run-4.qoi  run-5.qoi  run-6.qoi  run-7.qoi  run-8.qoi  run-9.qoi  text.txt
tools/: README.md
(+179 files in other folders)
